--- a/style.css
+++ b/style.css
@@ -101,5 +101,29 @@ margin-left:10%;
 #perRightMargin{
 height:200px;
 width:35%;
-
 }
+.defaultpadding{
+padding:10px;
+}
+.defaultMargin{
+
+margin:0px 30px;
+}
+.DefaultBorder{
+border:3px ridge fuchsia;
+/*SELECTS ELEMENTS INSIDE OTHER ELEMENTS*/
+}
+section h3{
+    font-size:42px;
+}
+section header h3{
+    font-size:30px;
+}
+section article p{
+    color:goldenrod;
+}
+/*SELECTS ELEMENTS INSIDE OTHER ELEMENTS*/
+section h3,section p{
+    color:goldenrod
+}
+
